labgeeks/static/css/main.less
/*--Utilities and Standards--*/
@import "variables.less";
@import "mixins.less";
@import "forms.less";
@import "dropdowns.less";

/*--Page Styles--*/
@import "schedule.less";
@import "nav.less";
@import "footer.less";
@import "login.less";
@import "dashboard.less";
@import "review.less";
@import "calendar.less";
@import "people.less";
@import "oracles.less";
@import "badger.less";

/*--FontAwesome--*/
@import "font-awesome-ie7.less";
@import "font-awesome.less";

* {
    font-family: Arial, Helvetica, sans-serif;
    padding: 0;
    margin: 0;
    border: 0;
    font-weight: normal;
    text-decoration: none;
}

html, body {
    height: 100%;
}

body {
    font-size: 10pt;
    width: 100%;
    overflow: visible;
}

#wrapper {
    min-height: 100%;
}

#content {
    overflow: visible;
    padding: 10px;
    padding-bottom: @footerHeight+50px;
    h1 {
        color: @header1Text;
        font-weight: bold;
        font-size: 16pt;
    }
    h2, h3 {
        font-size: 12pt;
    }
    > h2, h3 {
        padding-top: .5em;
        padding-bottom: .3em;
    }
    font-size: 11pt;
    form ul{
        padding: 1em;
        line-height: 17px;
        list-style: none outside none;
    }
}

a, .link {
    color: @link;
}
a:hover, .link:hover {
    color: @linkHover;
}

i {
    padding-right: .3em;
    font-size: 1.8em;
}
.long {
    display: none;
}

.btn-custom {
    background-color: #DDDDDD;
    margin: 0 5px 5px;
    padding-top: 6px;
    padding-bottom: 6px;
    padding-left: 8px;
    padding-right: 8px;
    border-radius: 5px 5px 5px 5px;
}

.blacker {
    color: black;
}

.oranger {
    color: orange;
}

.redder {
    color: red;
}

@media only screen and (min-width: @tablet_portrait) {
    i {
        font-size: 1em;
    }
    .long {
        display: inline;
    }
}

@media (max-width: @tablet_portrait) {
    body {
        padding: 0;
    }
}

form {
    padding-top: 3em;
    padding-left: 0.5em;
}

#group_name {
    padding-left: 1em;
}

.timeperiod_info {
    border: black 5px solid;
    float: left;
    margin: 20px;
    padding: 25px;
    padding-top: 0px;
    width: 300px;
}

.timeperiod_info h2 {
    font-size: 16pt;
    text-decoration: underline;
}

#group_section_wrapper {
    float: left;
    padding-right: 100px;
  }

.group_section {
    padding-top: 1em;
}

.group_section img {
    height: 50px;
}

.profile_picture {
    text-align: center;
}

#container {
    float: left;
}

#navigation_panel {
    border: 2px solid black;
    padding: 10px;
}

.affix {
    position: fixed;
    top: 100px;
}

.affix-bottom {
    position: absolute;
    bottom: 300px;
}

#missing_ids {
    width: 500px;
}

